# luxpower_sna

./: .gitignore  README.md  Readme.vi.MD  fan-controller.md  lovelace.yaml  luxEspData.ino  luxpower.yaml  luxpower_package.yaml  sna.yaml
Arduino/: Arduino Sketch.md  LuxParser.cpp  LuxParser.h  luxEspData.ino
components/: example.yaml  luxpower.yaml
components/luxclient/: __init__.py  crc.h  luxclient.cpp  luxclient.h  lxp_packet  lxp_packet.h
components/luxpower/: luxpower_inverter.h  sensor.cpp
components/luxpower_sna/: __init__.py  button.py  const.h  consts.h  luxpower.cpp  luxpower.h  luxpower_hub.cpp  luxpower_hub.h  luxpower_inverter.cpp  luxpower_inverter.h  luxpower_sna.cp  luxpower_sna.cpp  luxpower_sna.h  luxpower_sna_constants.h  luxpower_sna_sensor.cpp  luxpower_sna_sensor.h  number.py  registermap.h  sensor.h  sensor.py  sensors.cpp  sensors.h  switch.py  text_sensor.py  time.py
components/ota_http/: __init__.py  automation.h  ota_http_request.cpp  ota_http_request.h
docs/SENEGY/: Readme.md  (+1 more)
esp32_dongle/: CMakeLists.txt  sdkconfig.old
esp32_dongle/main/: CMakeLists.txt  config.h  idf_component.yml  lux_cloud.c  lux_ha_discovery.h  lux_local_server.c  lux_local_server.h  lux_log_mqtt.h  lux_mqtt.c  lux_ota.h  lux_proto.h  lux_relay.c  lux_relay.h  lux_rs485.c  lux_rs485.h  main.cpp  partitions.csv  sdkconfig.defaults  shared_state.c  shared_state.h
esphome/: base.yaml  doanvandan.yaml  homehna.yaml  homehnm.yaml
tools/: TR_guest_24_28_03_26.xlsx  firmware.hex  flash.py  lux_proxy.py  master.py  mon.py  ping.py  relay.py  usbrs485.py
(+32 files in other folders)
